--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.17.0",
-    "typescript": "~3.5.2"
+    "typescript": "^3.4.5"
   },
   "config": {
     "commitizen": {
