--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "bootstrap": "^4.3.1",
-    "core-js": "^3.1.4",
+    "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "rxjs": "~6.5.2",
     "sass-loader": "^7.1.0",
+    "shelljs": "^0.8.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
