--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "json-server": "^0.15.0",
     "rxjs": "~6.5.2",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.3",
