--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "concurrently 'ng serve' 'json-server --watch db.json'",
+    "start:dev": "concurrently 'ng serve' 'json-server --watch db.json'",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod --aot --build-optimizer && cd dist/hris-maintenance-app/ && zip -r -D hris-maintenance-app.zip ."
+    "start: deploy": "ng build --prod --aot --build-optimizer && cd dist/hris-maintenance-app/ && zip -r -D hris-maintenance-app.zip ."
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.3",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -22,16 +22,17 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "bootstrap": "^4.3.1",
-    "concurrently": "^4.1.1",
-    "core-js": "^2.5.7",
+    "caniuse-lite": "^1.0.30001010",
+    "concurrently": "^4.1.2",
+    "core-js": "^2.6.10",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
-    "json-server": "^0.15.0",
-    "lodash": "^4.17.11",
-    "rxjs": "~6.5.2",
-    "sass-loader": "^7.1.0",
+    "json-server": "^0.15.1",
+    "lodash": "^4.17.15",
+    "rxjs": "^6.5.3",
+    "sass-loader": "^7.3.1",
     "shelljs": "^0.8.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -41,17 +42,17 @@
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~8.0.3",
-    "@types/jasmine": "~3.3.13",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.0.10",
-    "codelyzer": "~5.1.0",
+    "@types/jasmine": "^3.4.6",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.12.8",
+    "codelyzer": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
-    "husky": "^2.6.0",
+    "husky": "^2.7.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
