chore: 🤖 updated command to run test on travisci
This commit will add command to run test on travisci

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start:dev": "concurrently 'ng serve' 'json-server --watch db.json'",
+    "start:travis": "ng test -- --no-watch --no-progress --code-coverage --browsers=ChromeHeadlessCI",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
