--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ addons:
       - google-chrome-stable
 
 before_install:
-  - npm i typescript@3.2.2 --save-dev --save-exact
-  - npm i core-js@2.6.5
-  - npm update
+  # - npm i typescript@3.2.2 --save-dev --save-exact
+  # - npm i core-js@2.6.5
+  # - npm update
   # - ng update
   # - npm i --only=dev
   # - npm uninstall -g @angular/cli
@@ -43,7 +43,7 @@ install:
   - npm install
 
 script:
-  - npm run build
+  - npm run start:travis
 
 notifications:
   email:
