--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "bootstrap": "^4.3.1",
     "caniuse-lite": "^1.0.30001010",
+    "chrome-headless": "^0.1.5",
     "concurrently": "^4.1.2",
     "core-js": "^2.6.10",
     "hammerjs": "^2.0.8",
@@ -52,7 +53,7 @@
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
-    "karma-chrome-launcher": "^2.2.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
