chore: 🤖 updated huskrc.json configurations
This commit will update huskyrc.json configurations

--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "npm run build",
+    "pre-commit": "npm run start:travis && npm run build",
     "prepare-commit-msg": "exec < /dev/tty && git cz --hook"
   }
 }
