--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "hris-maintenance-app:build"
+            "browserTarget": "hris-maintenance-app:build",
+            "proxyConfig": "proxy-config.json"
           },
           "configurations": {
             "production": {
