--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,7 +1,7 @@
 {
   "hooks": {
-    "pre-commit": "npm run start:travis && npm run build",
-    "prepare-commit-msg": "exec < /dev/tty && git cz --hook"
+    "pre-commit": "",
+    "prepare-commit-msg": ""
   }
 }
 
