--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start:json-server": "concurrently 'ng serve' 'json-server --watch db.json'",
-    "start:dev": "ng serve",
+    "start:dev": "ng serve --port 4209",
     "start:travis": "ng test -- --no-watch --no-progress --code-coverage --browsers=ChromeHeadlessCI",
     "build": "ng build",
     "test": "ng test",
@@ -35,6 +35,8 @@
     "jquery": "^3.4.1",
     "json-server": "^0.15.1",
     "lodash": "^4.17.15",
+    "ngx-spinner": "^8.1.0",
+    "ngx-ui-loader": "^8.0.0",
     "rxjs": "^6.5.3",
     "sass-loader": "^7.3.1",
     "shelljs": "^0.8.3",
@@ -42,7 +44,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.19",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.3.19",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
